# cafebazaar-apk-downloader-python

./: .gitignore  LICENSE  README.md  cafebazaar_downloader.py  pyproject.toml
.github/workflows/: tests.yml
tests/: test_downloader.py
