[project]
name = "cafebazaar-apk-downloader"
version = "1.0.0"
description = "Resolve and download direct APK links from Cafe Bazaar"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "QM4RS" }]
keywords = ["cafebazaar", "apk", "downloader", "android"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
cafebazaar-apk = "cafebazaar_downloader:main"

[tool.setuptools]
py-modules = ["cafebazaar_downloader"]
